@@ -1,5 +1,5 @@
 /*
- * "$Id: testmxml.c,v 1.5 2003/06/04 16:30:40 mike Exp $"
+ * "$Id: testmxml.c,v 1.6 2003/06/04 17:37:23 mike Exp $"
  *
  * Test program for mini-XML, a small XML-like file parsing library.
  *
@@ -17,8 +17,10 @@
  *
  * Contents:
  *
- *   main()    - Main entry for test program.
- *   type_cb() - XML data type callback for mxmlLoadFile()...
+ *   main()          - Main entry for test program.
+ *   type_cb()       - XML data type callback for mxmlLoadFile()...
+ *   whitespace_cb() - Let the mxmlSaveFile() function know when to insert
+ *                     newlines and tabs...
  */
 
 /*
@@ -33,6 +35,7 @@
  */
 
 mxml_type_t	type_cb(mxml_node_t *node);
+int		whitespace_cb(mxml_node_t *node, int where);
 
 
 /*
@@ -110,8 +113,7 @@ main(int  argc,				/* I - Number of command-line args */
   * Print the XML tree...
   */
 
-  mxmlSaveFile(tree, stdout);
-  puts("");
+  mxmlSaveFile(tree, stdout, whitespace_cb);
 
  /*
   * Delete the tree and return...
@@ -142,8 +144,7 @@ type_cb(mxml_node_t *node)		/* I - Element node */
 
   if (!strcmp(type, "integer"))
     return (MXML_INTEGER);
-  else if (!strcmp(type, "opaque") ||
-           !strcmp(type, "pre") || !strcmp(type, "PRE"))
+  else if (!strcmp(type, "opaque") || !strcmp(type, "pre"))
     return (MXML_OPAQUE);
   else if (!strcmp(type, "real"))
     return (MXML_REAL);
@@ -153,5 +154,44 @@ type_cb(mxml_node_t *node)		/* I - Element node */
 
 
 /*
- * End of "$Id: testmxml.c,v 1.5 2003/06/04 16:30:40 mike Exp $".
+ * 'whitespace_cb()' - Let the mxmlSaveFile() function know when to insert
+ *                     newlines and tabs...
+ */
+
+int					/* O - Whitespace char or 0 */
+whitespace_cb(mxml_node_t *node,	/* I - Element node */
+              int         where)	/* I - Open or close tag? */
+{
+  const char *name;			/* Name of element */
+
+ /*
+  * We can conditionally break to a new line before or after any element.
+  * These are just common HTML elements...
+  */
+
+  name = node->value.element.name;
+
+  if (!strcmp(name, "html") || !strcmp(name, "head") || !strcmp(name, "body") ||
+      !strcmp(name, "pre") || !strcmp(name, "p") ||
+      !strcmp(name, "h1") || !strcmp(name, "h2") || !strcmp(name, "h3") ||
+      !strcmp(name, "h4") || !strcmp(name, "h5") || !strcmp(name, "h6"))
+    return ('\n');
+  else if (!strcmp(name, "li"))
+  {
+   /*
+    * Put a tab before <li>'s and a newline after </li>'s...
+    */
+
+    if (where == MXML_SAVE_OPEN_TAG)
+      return ('\t');
+    else
+      return ('\n');
+  }
+  else
+    return (0);
+}
+
+
+/*
+ * End of "$Id: testmxml.c,v 1.6 2003/06/04 17:37:23 mike Exp $".
  */
